--- a/src/app/brush/brush.component.html
+++ b/src/app/brush/brush.component.html
@@ -52,7 +52,7 @@
                 <p class="heading-sub">
                     Check out this handy infographic on brushing!
                 </p>
-                <img src="../../assets/images/Notes_210811_135924_2ee.jpg" alt="">
+                <img src="../../assets/images/Notes_210811_135924_2ee.jpg" alt="" class="my-5">
                 <p class="heading-sub">
                     Of course, brushing your teeth is only a part of a complete dental care routine. You should also make sure to:
                 </p>
