--- a/src/app/cosmo/cosmo.component.html
+++ b/src/app/cosmo/cosmo.component.html
@@ -11,6 +11,11 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/cos1.jpg" alt="" class="image image-responsive small-img">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 px-5">
                 <p>
@@ -22,6 +27,11 @@
                 <p class="heading-sub-large">
                     INVISALIGN
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/cos2.jpg" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <p>
                     We’ll review some of the most common cosmetic dentistry treatments, including the benefits and what you can expect from treatment, to help you determine if cosmetic dentistry is the right option for you. Let’s get started.
                 </p>
@@ -74,6 +84,11 @@
                 <p class="heading-sub-large">
                     VENEERS
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/venners_before_and_after-1296x728-body-1296x728.jpg" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <p>
                     Dental veneers are a cosmetic dentistry treatment that helps your smile appear straighter and whiter. It involves applying thin, tooth-colored porcelain over the teeth. Veneers look like natural teeth and when cared for properly, are extremely durable.
                 </p>
@@ -124,6 +139,11 @@
                 <p class="heading-sub-large">
                     Teeth Whitening
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/cos 3 teeth-whitening.jpg" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <p>
                     If you’ve been dreaming of a whiter smile, you’re not alone. In fact, a survey found that 75% of people reported that they wished their smile was whiter. That’s where professional teeth whitening treatments come in.
                 </p>
@@ -159,6 +179,11 @@
                 <p class="heading-sub-large">
                    BOTOX
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/cos 4 botox-image-1-v3.jpg" alt="" class="image image-responsive small-img-cosmo">
+                    </div>
+                </div>
                 <p>
                     Many people are surprised to learn that they can receive Botox treatments right here! Botox has been named as a “miracle drug,” and we’ve seen firsthand both its aesthetic and therapeutic benefits. 
                 </p>
