--- a/src/app/crown/crown.component.html
+++ b/src/app/crown/crown.component.html
@@ -11,6 +11,11 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/crowns_before_after.jpg" alt="" class="image image-responsive small-img-crown">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 px-5">
                 <p>
@@ -19,6 +24,11 @@
                 <p class="heading-sub">
                     What is a crown?
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/crown gif 2.gif" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <p>
                     A crown is basically a manufactured tooth. It’s generally made of porcelain or ceramic that can be colour and texture-matched to your existing teeth. A crown can also be made of gold alloys for improved strength when replacing a back tooth. Often a metal crown will have porcelain bonded to the exterior to give it strength and a natural look.
                 </p>
@@ -31,6 +41,11 @@
                 <p class="heading-sub">
                     What is a bridge?
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/bridge gif.gif" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <p>
                     A bridge is a prosthetic appliance that replaces missing teeth. Bridges are usually made of porcelain fused to metal in order to achieve both strength and a natural look.
                 </p>
@@ -131,6 +146,11 @@
                     <li class="text-point">Helps maintain the shape of the patient’s face</li>
                     <li class="text-point">Prevents adjacent teeth from shifting</li>
                 </ol>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/crown bridge.jpg" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <p class="heading-sub">
                     Crowns and Bridges vs. Dental Implants – What Is Best?
                 </p>
