--- a/src/app/dentures/dentures.component.html
+++ b/src/app/dentures/dentures.component.html
@@ -11,6 +11,11 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/den gif.gif" alt="" class="image image-responsive">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 px-5">
                 <p class="heading-sub">
@@ -39,6 +44,11 @@
                     
                     Sometimes your dental team may advise you to wait until your gums are healed before having your dentures, as this can sometimes mean a better fit. Healing may take several months. <br>
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/den1.jpg" alt="" class="image image-responsive">
+                    </div>
+                </div>
                 <p class="heading-sub">
                     Who will make and fit my denture?
                 </p>
@@ -99,6 +109,11 @@
                 <p class="heading-sub">
                     How do I take care of my dentures?
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/den3.jfif" alt="" class="image image-responsive">
+                    </div>
+                </div>
                 <p>
                     Dentures may break if you drop them. Always clean your dentures over a bowl of water or a folded towel in case you drop them. <br>
 
@@ -112,8 +127,10 @@
 
                     If you notice a build-up of stains or scale, have your denture cleaned by your dental team. <br>
 
-                    <a href="">Click here for more information on denture cleaning.</a>
                 </p>
+                <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                    <img src="../../assets/images/den5.jpeg" alt="" class="image image-responsive">
+                </div>
                 <p class="heading-sub">
                     How long will my dentures last?
                 </p>
@@ -156,6 +173,11 @@
                 <p class="heading-sub">
                     What if I have a metal denture?
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/den2.jpg" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <p>
                     Some cleaning products can damage metal dentures, so talk to your dental team about how to clean them. If your denture has clasps, you need to take particular care when cleaning to avoid damage.
                 </p>
@@ -183,6 +205,11 @@
                 <p>
                     It is important to visit your dental team regularly even if you don’t have any of your natural teeth. Dentists do not check just your teeth, but also the soft parts of the mouth, including the tongue and cheeks. These examinations are just as important, so the dental team can spot any infections, mouth conditions or even mouth cancer at the earliest stages. Your dental team will be able to tell you how often you should visit. 
                 </p>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/den6.jpg" alt="" class="image image-responsive small-img">
             </div>
         </div>
     </div>
