--- a/src/app/extraction/extraction.component.html
+++ b/src/app/extraction/extraction.component.html
@@ -11,6 +11,11 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/ext-serv.gif" alt="" class="image image-responsive small-img">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 px-5">
                 <p>
@@ -21,8 +26,13 @@
                 </p>
                 <p>
                     Your dentist will plan for an extraction only when there is absolutely no other possible way out to save the tooth in general cases while sometimes it might be necessary due to various other reasons like mal position of the tooth, cosmetic dental treatments, orthodontic treatment etc.
-                </p>
-                <p>
+                </p>\
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/ext2.jfif" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
+                <p class="heading-sub-large">
                     You might feel-
                 </p>
                 <ol>
@@ -34,8 +44,7 @@
                 <p>
                     <strong>Disclaimer : It is not always necessary to feel all of these symptoms. You might just experience a few of them or none at all ( it might be even painless ! ). So it is always advisable to visit an expert Dentist if you feel any kind of  discomfort since 'Prevention is better than cure'.</strong>
                 </p>
-                <p>
-                    Learn more about the procedure : <a href="">Link to video</a> <br>
+                <p class="heading-sub-large">
                     Steps Involved : 
                 </p>
                 <ul>
@@ -52,7 +61,12 @@
                         Post op instructions and care
                     </li>
                 </ul>
-                <p class="heading-sub">Some fast facts!</p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/ext3.jpg" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
+                <p class="heading-sub-large">Some fast facts!</p>
                 <ol>
                     <li class="text-point">
                         Recent studies show that the extraction rate has reduced by above 60 percent due to evolution of newer treatments available.
@@ -98,6 +112,11 @@
                         </p>
                     </li>
                 </ol>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/ext4.jpg" alt="" class="image image-responsive small-img">
             </div>
         </div>
     </div>
