--- a/src/app/filling/filling.component.html
+++ b/src/app/filling/filling.component.html
@@ -11,6 +11,11 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-4 ">
+                <img src="../../assets/images/resto 1.jfif" alt="" class="image image-responsive" style="max-height:300px;">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 text-body px-5">
                 <p>
@@ -59,6 +64,11 @@
                 <ol class="ind-list">
                     <li>
                         <p class="heading-sub">Crowns</p>
+                        <div class="row d-flex justify-content-center mb-3">
+                            <div class="col-11 col-md-10 col-lg-4 ">
+                                <img src="../../assets/images/resto 2.jpg" alt="" class="image image-responsive" style="max-height:300px;">
+                            </div>
+                        </div>
                         <p>
                             A crown is a tooth-shaped cap that is placed over a tooth. It is used to strengthen and protect your tooth structure. Your dentist prepares the tooth, takes an impression and the crown is made in a lab by a specialist.A crown is ideal for people with broken teeth or cavities.The crown is cemented into place over the damaged tooth.
 
@@ -66,12 +76,22 @@
                     </li>
                     <li>
                         <p class="heading-sub">Bridges</p>
+                        <div class="row d-flex justify-content-center mb-3">
+                            <div class="col-11 col-md-10 col-lg-4 ">
+                                <img src="../../assets/images/shutterstock_1260385081.jpg" alt="" class="image image-responsive" style="max-height:300px;">
+                            </div>
+                        </div>
                         <p>
                             A dental bridge "bridges" the gap where there are missing teeth. A bridge has a crown on each end as an anchor with an artificial tooth or teeth connecting the crowns and filling the space. A bridge can keep your other teeth from moving out of place. Once a bridge is placed, it works just like your natural teeth.
                         </p>
                     </li>
                     <li>
                         <p class="heading-sub">Dental Implants</p>
+                        <div class="row d-flex justify-content-center mb-3">
+                            <div class="col-11 col-md-10 col-lg-4 ">
+                                <img src="../../assets/images/resto 5.jpg" alt="" class="image image-responsive" style="max-height:300px;">
+                            </div>
+                        </div>
                         <p>
                             Dental implants are used to replace missing teeth. An implant has 2 parts: a metal anchor and a false tooth, similar to a crown. A dental implant looks and feels like a natural tooth.The metal anchor is inserted into the jawbone. After the anchor has been inserted, a false tooth is put into place.
                         </p>
@@ -146,6 +166,11 @@
                 <p class=" ml-2">
                     If there is a problem with your dental restoration – such as a crack in your filling or dentures that don’t fit properly, see your dentist right away. 
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-4 ">
+                        <img src="../../assets/images/resto 6.jpg" alt="" class="image image-responsive" style="max-height:300px;">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
