--- a/src/app/implant/implant.component.html
+++ b/src/app/implant/implant.component.html
@@ -11,6 +11,11 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/implant gif.gif" alt="" class="image image-responsive small-img">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 px-5">
                 <p>
@@ -89,6 +94,11 @@
                 <p class="heading-sub">
                     Procedure -
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/imp3.jpg" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <ol>
                     <li class="text-point">During the consult and planning stage, the dental surgeon will visually examine the site in the mouth where a dental implant is being considered as well as look at dental imaging studies (X-rays, panoramic films, and/or CT scans).</li>
                     <li class="text-point">At this time, the quality and quantity of jawbone is assessed to determine if more bone is needed at the site.</li>
@@ -101,6 +111,7 @@
                     <li class="text-point">During this time, the implant becomes integrated with the bone. It's important to avoid placing any force or stress on the dental implant as it heals.</li>
                     <li class="text-point">Follow-up appointments to check the surgical site are typically done to ensure that no infection exists and healing is taking place.</li>
                 </ol>
+                
                 <p>
                     After the required healing period, the dental implant is tested to determine whether it was successfully taken up by the surrounding bone. Once this has been confirmed, a prosthetic component is connected to the dental implant via a screw. This component is called an "abutment." It will serve to hold the replacement tooth or "crown." <br>
                     The dentist will take an impression (mold) of this abutment in the mouth and have the implant crown custom-made to fit. The implant crown is either cemented on or secured with a screw to the abutment.
@@ -114,6 +125,11 @@
                 <p class="heading-sub">
                     What are the potential risks, complications, and problems with a dental implant?
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/imp1.jpg" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <ol>
                     <li class="text-point">With any surgery, there are always some risks and potential complications to the patient or to the success of a dental implant.</li>
                     <li class="text-point">Careful planning is important to ensure that a patient is healthy enough to undergo oral surgery and heal properly.</li>
@@ -132,6 +148,11 @@
                 <p class="heading-sub">
                     What follow-up care is necessary after getting a dental implant?
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                        <img src="../../assets/images/imp2.jpg" alt="" class="image image-responsive small-img">
+                    </div>
+                </div>
                 <ol>
                     <li class="text-point">Dental implants have the risk of developing a condition called "peri-implantitis," which is the equivalent of periodontal (gum) disease for natural teeth. This refers to inflammation of the gum and bone surrounding the implant.</li>
                     <li class="text-point">The inflammation of the surrounding tissues is often due to excessive biting forces on the implant or bacterial infection.</li>
@@ -141,5 +162,6 @@
                 </ol>
             </div>
         </div>
+        
     </div>
 </section>
