--- a/src/app/peado/peado.component.html
+++ b/src/app/peado/peado.component.html
@@ -11,6 +11,11 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                <img src="../../assets/images/pedo2.jpg" alt="" class="image image-responsive small-img-pedo">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 px-5">
                 <p>
@@ -55,6 +60,11 @@
                         <p class="heading-sub"><strong>
                             Stainless Steel Crowns (SSCs)
                         </strong></p>
+                        <div class="row d-flex justify-content-center mb-3">
+                            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                                <img src="../../assets/images/pedo 3.jpg" alt="" class="image image-responsive small-img">
+                            </div>
+                        </div>
                         <p>
                             Stainless steel crowns are used to restore back teeth that are too badly decayed to hold white fillings.  When tooth decay on back teeth has been left untreated, teeth may have extensive damage to the enamel, dentin and sometimes the nerve (pulp). In such cases, tooth-colored fillings are not a viable option, and stainless steel crowns necessary.  These prefabricated sliver-colored crowns are fit; then cemented onto the primary (baby) teeth to prevent further damage until these teeth are naturally lost.
                         </p>
@@ -132,6 +142,11 @@
                         <p class="heading-sub"><strong>
                             Pulp Treatment (Pulpotomy)
                         </strong></p>
+                        <div class="row d-flex justify-content-center mb-3">
+                            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                                <img src="../../assets/images/pedo1.png" alt="" class="image image-responsive small-img">
+                            </div>
+                        </div>
                         <p>
                             Pulp therapy (pulpotomy) is the treatment of infected nerves and blood vessels in teeth.  Pulp therapy generally becomes necessary for two reasons: either as a result of extensive tooth decay (dental cavities) or as the result of tooth injury.  Failure to provide the necessary pulp therapy could result in your child experiencing pain, infection, swelling, or loss of the tooth. 
                             <br>
@@ -142,6 +157,11 @@
                         <p class="heading-sub"><strong>
                             Sealants
                         </strong></p>
+                        <div class="row d-flex justify-content-center mb-3">
+                            <div class="col-11 col-md-10 col-lg-5 d-flex justify-content-center">
+                                <img src="../../assets/images/pedo 4.webp" alt="" class="image image-responsive small-img">
+                            </div>
+                        </div>
                         <p>
                             Sealants are thin, white plastic coatings that are applied to the tops or chewing surfaces of back teeth and are highly effective in preventing tooth decay.  The naturally occurring pits and grooves on the chewing surfaces of teeth can often collect plaque. These small grooves and cracks are the most susceptible to cavities in children and teens and benefit the least from topical fluoride.  Sealants and fluoride work together to help prevent tooth decay.  On average, sealants last for 5 to 10 years with proper maintenance.  At every dental check-up, the dentist will check that the sealants are intact.  In order to prolong the life of your child’s sealants, avoid crunchy foods and avoid chewing on ice and hard candy (i.e. Jolly Ranchers, Lifesavers, etc).
                         </p>
