--- a/src/app/scaling/scaling.component.html
+++ b/src/app/scaling/scaling.component.html
@@ -11,6 +11,11 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-4 ">
+                <img src="../../assets/images/scaling gif.gif" alt="" class="image image-responsive" style="max-height:300px;">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 px-5">
                 <p>
@@ -19,6 +24,11 @@
                 <p class="heading-sub">
                     When do you need a scaling?
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-4 ">
+                        <img src="../../assets/images/scaling2.jpg" alt="" class="image image-responsive" style="max-height:300px;">
+                    </div>
+                </div>
                 <p>
                     Your dentist will recommend teeth scaling if your mouth has signs of swollen gums. A thorough cleaning can stop harmful effects of this condition and keep your mouth healthy. This occurs when the bacteria in plaque cause your gums to pull away from your teeth. This causes large pockets to grow between your teeth and gums and more bacteria can grow there that you cannot reach with teeth brushing at home.
                 </p>
@@ -38,7 +48,6 @@
                     <strong>Disclaimer : It is not always necessary to feel all of these symptoms. You might just experience a few of them or none at all ( it might be even painless ! ). So it is always advisable to visit an expert Dentist if you feel any kind of  discomfort since 'Prevention is better than cure'.</strong>
                 </p>
                 <p>
-                    Learn more about the procedure : <a href="">Link to video</a> <br>
                     Steps
                 </p>
                 <ul>
@@ -109,6 +118,11 @@
                         </p>
                     </li>
                 </ol>
+            </div>
+            <div class="row d-flex justify-content-center mb-3" style="width: 100%;">
+                <div class="col-11 col-md-10 col-lg-8 d-flex justify-content-center ">
+                    <img src="../../assets/images/scaling4.jpg" alt="" class="image image-responsive small-img" >
+                </div>
             </div>
         </div>
     </div>
