--- a/src/app/cancer/cancer.component.html
+++ b/src/app/cancer/cancer.component.html
@@ -18,7 +18,7 @@
                 </p>
                 <div class="row d-flex justify-content-center mb-3">
                     <div class="col-11 col-md-10 col-lg-4 ">
-                        <img src="../../assets/images/da 12.jfif" alt="" class="image image-responsive" style="max-height:300px;">
+                        <img src="../../assets/images/oral cancer.png" alt="" class="image image-responsive" style="max-height:300px;">
                     </div>
                 </div>
                 <p>
