--- a/src/app/diet/diet.component.html
+++ b/src/app/diet/diet.component.html
@@ -122,5 +122,10 @@
                 </p>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-4 ">
+                <img src="../../assets/images/family-smile.jpg" alt="" class="image image-responsive" style="max-height:300px;">
+            </div>
+        </div>
     </div>
 </section>
