--- a/src/app/rct/rct.component.html
+++ b/src/app/rct/rct.component.html
@@ -11,6 +11,11 @@
                 <strong>by Dr. Smile</strong>
             </div>
         </div>
+        <div class="row d-flex justify-content-center mb-3">
+            <div class="col-11 col-md-10 col-lg-4 ">
+                <img src="../../assets/images/rct.gif" alt="" class="image image-responsive" style="max-height:300px;">
+            </div>
+        </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto col-12 px-5">
                 <p>
@@ -25,6 +30,16 @@
                     When decay gets into the soft core, the pulp can become inflamed or infected, or even necrotic (dead). A root canal is needed to clean out the decay.
 
                 </p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-4 ">
+                        <img src="../../assets/images/rct-when.png" alt="" class="image image-responsive" style="max-height:300px;">
+                    </div>
+                </div>
+                <!--div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-4 ">
+                        <img src="../../assets/images/rct3.jpg" alt="" class="image image-responsive" style="max-height:300px;">
+                    </div>
+                </div-->
                 <p class="heading-sub">
                     You might feel -
                 </p>
@@ -47,6 +62,11 @@
                 </ul>
                 <p><strong>Disclaimer : It is not always necessary to feel all of these symptoms. You might just experience a few of them or none at all ( it might be even painless ! ). So it is always advisable to visit an expert Dentist if you feel any kind of  discomfort since 'Prevention is better than cure'.</strong></p>
                 <p class="heading-sub">Steps to perform RCT:</p>
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-4 ">
+                        <img src="../../assets/images/rct1.png" alt="" class="image image-responsive" style="max-height:300px;">
+                    </div>
+                </div>
                 <ul>
                     <li class="text-point">
                         Extract bacteria and decay from the tooth pulp, root and nerve
@@ -96,7 +116,11 @@
                 <p class="ml-2">
                     Varies from clinic to clinic but here we try to provide the best possible treatment for reasonable prices .
                 </p>
-                
+                <div class="row d-flex justify-content-center mb-3">
+                    <div class="col-11 col-md-10 col-lg-4 ">
+                        <img src="../../assets/images/rct6.jpg" alt="" class="image image-responsive" style="max-height:300px;">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
